@@ -1,3 +1,9 @@
+2010-02-05  Christophe Lyon  <christophe.lyon@st.com>
+
+	* gas/arm/arm-it-auto.d, gas/arm/bl-local-v4t.d,
+	gas/arm/blx-local.d, gas/arm/thumb-w-good.d: Update expected
+	results.
+
 2010-01-30  Richard Sandiford  <r.sandiford@uk.ibm.com>
 
 	* gas/ppc/xcoff-ref-1.s, gas/ppc/xcoff-ref-1.l: New test.
